external-crates/move/move-compiler/tests/move_check/typing/constraints_not_satisfied_type_annotation.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:26
  │
2 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
3 │     struct C {}
4 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
7 │         ignore((abort 0: CupC<R>));
  │                          ^^^^^^^
  │                          │    │
  │                          │    The type '0x8675309::M::R' does not have the ability 'copy'
  │                          'copy' constraint not satisifed

warning[W09004]: unnecessary trailing semicolon
  ┌─ tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:35
  │
7 │         ignore((abort 0: CupC<R>));
  │                 -------           ^
  │                 │                 │
  │                 │                 Invalid trailing ';'
  │                 │                 A trailing ';' in an expression block implicitly adds a '()' value after the semicolon. That '()' value will not be reachable
  │                 Any code after this expression will not be reached
  │
  = This warning can be suppressed with '#[allow(unused_trailing_semi)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

